Fixes problem with calendar dayBar having a slight gray gap on mobile

--- a/client/stylesheets/events.less
+++ b/client/stylesheets/events.less
@@ -78,11 +78,12 @@
 .dayBar {
   margin: 0;
   border: 0;
+  background: white;
+  overflow: auto;
   width: 100%;
 
   .dayLabel {
     float: left;
-    background: white;
     text-align: center;
     padding: 7px 0 6px 0;
     color: @gray;
